--- a/database.yml
+++ b/database.yml
@@ -5,7 +5,7 @@ services:
 
   db:
     image: postgres
-    restart: always
+    restart: on-failure
     environment:
       POSTGRES_PASSWORD: example
     ports:
